2002-03-01  Frank Warmerdam  <warmerdam@pobox.com>

	* memdataset: retain nodata values.

	* GDALRasterBand: added the GetBand() method.

2002-02-07  Frank Warmerdam  <warmerdam@pobox.com>

	* apps/gdal_translate.c: added -scale commandline option.

	* frmts/raw/pauxdataset.cpp: Bug reported by Max fixed.  Only read
	or write the exactly number of bytes required to avoid slight reads
	past end of file resulting in error and data loss.

2002-02-06  Frank Warmerdam  <warmerdam@pobox.com>

	* ntf_estlayers.cpp: TEXT_CODE now 4 wide, not 3.

	* OLEDB Provider: Fixed serious bug resulting in the end of rowset
	not being returned properly in many cases. 

2002-02-04  Frank Warmerdam  <warmerdam@pobox.com>

	* Release GDAL 1.1.6.

2002-01-28  Frank Warmerdam  <warmerdam@pobox.com>

	* dted: added metadata read and write

2002-01-25  Frank Warmerdam  <warmerdam@pobox.com>

	* configure: add support for linking against Xerces library.

2002-01-21  Simon Perkins  <s.perkins@lanl.gov>

	* frmts/fits/fitsdataset.cpp: Silently truncate when writing
	values to FITS files outside valid range.

2002-01-16  Frank Warmerdam  <warmerdam@pobox.com>

	* port/cpl_config.h.in, port/cpl_port.h, aclocal.m4, configure:
	add support for predefining _LARGEFILE64_SOURCE when necessary.

2002-01-12  Frank Warmerdam  <warmerdam@pobox.com>

	* core/gdal.h: added GDAL_VERSION_NUM, GDAL_RELEASE_DATE and
	GDAL_RELEASE_NAME macros.

2001-12-15  Frank Warmerdam  <warmerdam@pobox.com>

	* core/gdaldriver.cpp: try to ensure that poDriver gets set on 
	datasets after creation.

	* ogr/ogrsf_frmts/s57/*: implement fast feature counting and fetching
	of extents boxes.

2001-12-14  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/aigrid/gridlib.c: fixed handling of RMin's sign for short
	RMin values.

2001-12-12  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/raw/*: added support for large files in rawdataset.h, and
	some of the derived formats.

2001-12-11  Frank Warmerdam  <warmerdam@pobox.com>
