@@ -1,3 +1,10 @@
+2002-03-25  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* gdalinfo.c: modified to only report min/max values if they were
+	successfully fetched.  
+
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=114
+
 2002-03-01  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* memdataset: retain nodata values.
